fix: Web Font loading and font styles fix: Carousel & Carousel Items sizing on iOS Safari

--- a/src/app.html
+++ b/src/app.html
@@ -19,6 +19,77 @@
 
 			gtag("config", "G-758W5TJNMT");
 		</script>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-300.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-500.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-600.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-700.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-regular.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-300.woff"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-500.woff"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-600.woff"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-700.woff"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/assets/fonts/commissioner-v5-latin-regular.woff"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0"
