hot-fix: Search component syntax error chore: lint + prettier

--- a/src/app.html
+++ b/src/app.html
@@ -11,13 +11,13 @@
 			src="https://www.googletagmanager.com/gtag/js?id=G-758W5TJNMT"
 		></script>
 		<script>
-			window.dataLayer = window.dataLayer || [];
+			window.dataLayer = window.dataLayer || []
 			function gtag() {
-				dataLayer.push(arguments);
+				dataLayer.push(arguments)
 			}
-			gtag("js", new Date());
+			gtag('js', new Date())
 
-			gtag("config", "G-758W5TJNMT");
+			gtag('config', 'G-758W5TJNMT')
 		</script>
 		<link
 			rel="preload"
