fixes: Playlist close and open with button chore: Typing API responses - adding load functions to improve performance

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="shortcut icon" href="/favicon.ico" />
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script
+		<!-- <script
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=G-758W5TJNMT"
 		></script>
@@ -18,7 +18,7 @@
 			gtag('js', new Date())
 
 			gtag('config', 'G-758W5TJNMT')
-		</script>
+		</script> -->
 		<link
 			rel="preload"
 			href="/assets/fonts/commissioner-v5-latin-300.woff2"
