updated future replacement SCSS changed scale and sizing of components Fixed bugs in loading more songs

--- a/src/app.html
+++ b/src/app.html
@@ -5,18 +5,20 @@
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="shortcut icon" href="/favicon.ico" />
 
-		<meta
+		<!-- <meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0"
+		/> -->
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1"
 		/>
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86"> -->
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta
-			name="apple-mobile-web-app-status-bar-style"
-			content="black-translucent"
-		/>
-		<meta content="yes" name="apple-touch-fullscreen" />
+		name="apple-mobile-web-app-status-bar-style"
+		content="black-translucent"
+	/>		<meta content="yes" name="apple-touch-fullscreen" />
 		<meta name="apple-mobile-web-app-title" content="Beatbump" />
 		<link rel="apple-touch-startup-image" href="/logo-header.png" />
 		<link rel="apple-touch-icon" href="/logo-header.png" />
