--- a/src/app.html
+++ b/src/app.html
@@ -16,9 +16,10 @@
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta
-		name="apple-mobile-web-app-status-bar-style"
-		content="black-translucent"
-	/>		<meta content="yes" name="apple-touch-fullscreen" />
+			name="apple-mobile-web-app-status-bar-style"
+			content="black-translucent"
+		/>
+		<meta content="yes" name="apple-touch-fullscreen" />
 		<meta name="apple-mobile-web-app-title" content="Beatbump" />
 		<link rel="apple-touch-startup-image" href="/logo-header.png" />
 		<link rel="apple-touch-icon" href="/logo-header.png" />
