[FEAT] added p2p data sync - More indexedDB functionality

--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,8 @@
 		/>
 		<!-- Preload settings -->
 		<script>
+			var parcelRequire
+
 			if (!('theme' in localStorage)) {
 				localStorage.setItem('theme', 'dark')
 			}
