--- a/src/app.html
+++ b/src/app.html
@@ -19,6 +19,7 @@
 
 			if (/(iPad|iPhone|iPod)/g.test(navigator.userAgent) === true) {
 				localStorage.setItem('iOSClient', true)
+				// console.log('caught!')
 			}
 			localStorage.setItem('iOSClient', false)
 			document.querySelector('html').classList.add(localStorage.theme)
