--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		/>
 		<link rel="icon" href="/assets/favicon.ico" />
 		<link rel="shortcut icon" type="image/svg" href="/logo.svg" />
-		<link rel="shortcut icon" type="image/png" href="/logo.png" />
+		<link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
 		<meta name="application-name" content="Beatbump" />
 		<meta name="msapplication-TileColor" content="#da532c" />
