...rest of last commit

--- a/src/app.html
+++ b/src/app.html
@@ -37,13 +37,13 @@
 		<link rel="manifest" href="/manifest.json" />
 
 		<script>
-			var parcelRequire
+			var parcelRequire;
 
 			if (!('theme' in localStorage)) {
-				localStorage.theme = 'dark'
+				localStorage.theme = 'dark';
 			}
 
-			document.documentElement.classList.add(localStorage.theme)
+			document.documentElement.classList.add(localStorage.theme);
 		</script>
 		%svelte.head%
 	</head>
