--- a/app/src/app.html
+++ b/app/src/app.html
@@ -19,6 +19,7 @@
 		<meta name="apple-mobile-web-app-title" content="Beatbump" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5" />
+		<link rel="preload" type="image/svg+xml" href="/icons.svg" />
 		<meta name="theme-color" content="#310740" />
 		<meta name="apple-mobile-web-app-orientations" content="portrait" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
